--- a/login.html
+++ b/login.html
@@ -7,18 +7,19 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f2f2f2;
+      background: hsl(0,0%,90%);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+
     }
 
     .login-container {
-      background: white;
+      background: linear-gradient(#e66465, #9198e5);
       padding: 30px 40px;
       border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 15px hsl(0,0%, 30%);
       width: 300px;
     }
 
