--- a/admin/index.html
+++ b/admin/index.html
@@ -8,12 +8,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Oregano:ital@0;1&display=swap" rel="stylesheet">
         
-        <link href="index.css" rel="stylesheet" type="text/css">
+        <link href="index.css?v=1" rel="stylesheet" type="text/css">
         <title>Admin Login</title>
         <style>
             body {
-                color: hsl(0,0%,90%);
-                background-color: hsl(0, 0%, 0%);
+                background-color: hsl(0,0%,97%);
                 font-family: 'Oregano', italic;
                 display: flex;
                 justify-content: center;
@@ -29,8 +28,9 @@
                 <h1 align="center">Admin Login</h1>
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <input type="submit" value="Login" name="submit">
+                <input type="submit" name="submit">
             </form>
         </div>
+
     </body>
 </html>
