Added some ui features

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,13 +14,9 @@
     </head>    
     <body>
         <nav>
-            <h1 style="margin-left: 40px;">RETAILO</h1>
+            <h1>RETAILO</h1>
             
             <div class="nav-links">
-                <form>
-                    <input style="border: 3px solid var(--200);" type="search" name="product-name">
-                    <button>Search</button>
-                </form>
                 <div class="dropdown">
                     <button style="background-color: transparent;">Categories</button>
                     <div class="contents">
@@ -34,9 +30,11 @@
             </div>
         </nav>    
         <div class="featured-products">
-            <h3>Featured Products</h3>
+            <h2>Featured Products</h2>
             <div class="product-card">
-                <img src="../images/image_default.jpg" alt="image_default">
+                <img src="../images/dev-boards/arduino-nano-33.jpg" alt="image_default">
+                <p class="overlay">Arduino Nano 33</p>
+
             </div>
         </div>    
     </body>
