--- a/src/user/index.html
+++ b/src/user/index.html
@@ -2,15 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/index.css?v=10" />
+        <link rel="stylesheet" href="css/index.css?v=13" />
+        <link rel="stylesheet" href="css/navbar.css?v=13" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <script>
-
-        </script>
+        <style>
+            /* For rem calculation */
+            html {
+                max-width: 100vw;
+            }
+        </style>
     </head>    
     <body>
         <nav>
@@ -18,7 +22,7 @@
             
             <div class="nav-links">
                 <div class="dropdown">
-                    <button style="background-color: transparent;">Categories</button>
+                    <button style="background-color: transparent;font-size: large;">Catalog</button>
                     <div class="contents">
                         <a>Dev-boards</a>
                         <a>Modules</a>  
@@ -29,13 +33,19 @@
                 <a href="#"><span class="material-symbols-outlined">settings</span></a>
             </div>
         </nav>    
-        <div class="featured-products">
-            <h2>Featured Products</h2>
+        <div id="featured-products">
+            <h2 style="margin-left: 45px;font-size: 1.7rem;">Featured Products</h2>
             <div class="product-card">
-                <img src="../images/dev-boards/arduino-nano-33.jpg" alt="image_default">
-                <p class="overlay">Arduino Nano 33</p>
-
+                <img src="../images/dev-boards/arduino-nano-33.jpg" alt="arduino-nano-33">
+                <p class="overlay"><a href="#">Arduino Nano 33</a></p>
             </div>
-        </div>    
+            <div class="product-card">
+                <img src="../images/sensor-modules/ir-sensor-module.jpg" alt="ir-sensor-module">
+                <p class="overlay"><a href="#">IR Sensor Module</a></p>
+            </div>
+        </div> 
+        <div id="site-features">
+             Options
+        </div>   
     </body>
 </html>
