--- a/src/user/index.html
+++ b/src/user/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <title>Retailo</title>
         <style>
             /* For rem calculation */
             html {
@@ -33,7 +34,8 @@
                 <a href="#"><span class="material-symbols-outlined">settings</span></a>
             </div>
         </nav>    
-        <div id="featured-products">
+        <div id="home">
+            <!--
             <h2 style="margin-left: 45px;font-size: 1.7rem;">Featured Products</h2>
             <div class="product-card">
                 <img src="../images/dev-boards/arduino-nano-33.jpg" alt="arduino-nano-33">
@@ -46,6 +48,15 @@
         </div> 
         <div id="site-features">
              Options
+        </div>
+            -->
+        <div #id="bgimg">
+            <img src="../images/bg/img1.webp">
+            <img src="../images/bg/img2.webp">
+            <h2>Premium Developments Boards</h2>
+            <button>Shop</button>
+
+        </div>
         </div>   
     </body>
 </html>
