--- a/src/user/index.html
+++ b/src/user/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="css/index.css?v=13" />
-        <link rel="stylesheet" href="css/navbar.css?v=13" />
+        <link rel="stylesheet" href="css/navbar.css?v=15" />
+        <link rel="stylesheet" href="css/buttons.css?v=13"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,27 +12,37 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <title>Retailo</title>
         <style>
-            /* For rem calculation */
             html {
                 max-width: 100vw;
             }
         </style>
+        <script>
+            function openPanel(){
+                document.getElementById('side-panel').style.width = "10vw";
+            }
+            function closePanel(){
+                document.getElementById('side-panel').style.width = "0vw";
+            }
+        </script>
     </head>    
     <body>
         <nav>
-            <h1>RETAILO</h1>
-            
-            <div class="nav-links">
-                <div class="dropdown">
-                    <button style="background-color: transparent;font-size: large;">Catalog</button>
-                    <div class="contents">
-                        <a>Dev-boards</a>
-                        <a>Modules</a>  
-                    </div>
-            
+            <div id="side-panel" class="side-panel">
+                <a href="javascript:void(0)" class="closebtn" onclick="closePanel()">&times;</a>
+                <a href="#">Catalog</a>
+                <a href="#">Products</a>
+                <a href="#">None</a>
+                <a href="#">Contact</a>
+            </div>
+            <div class="menu">
+                <div class="slide-menu">
+                    <button class="menu" onclick="openPanel()"><span class="material-symbols-outlined">menu</span></button>
                 </div>
+            </div>
+            <h1>RETAILO</h1>
+            <div class="user-features">
                 <a href="#"><span class="material-symbols-outlined">account_circle</span></a>
-                <a href="#"><span class="material-symbols-outlined">settings</span></a>
+                <a href="#"><span class="material-symbols-outlined">shopping_bag</span></a>
             </div>
         </nav>    
         <div id="home">
@@ -50,12 +61,9 @@
              Options
         </div>
             -->
-        <div #id="bgimg">
-            <img src="../images/bg/img1.webp">
-            <img src="../images/bg/img2.webp">
+        <div id="home">
             <h2>Premium Developments Boards</h2>
-            <button>Shop</button>
-
+            <button class="buttons">Shop</button>
         </div>
         </div>   
     </body>
