--- a/src/user/index.html
+++ b/src/user/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8" />
+        
         <link rel="stylesheet" href="css/index.css?v=13" />
         <link rel="stylesheet" href="css/navbar.css?v=15" />
         <link rel="stylesheet" href="css/buttons.css?v=13"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <title>Retailo</title>
         <style>
@@ -45,7 +44,6 @@
                 <a href="#"><span class="material-symbols-outlined">shopping_bag</span></a>
             </div>
         </nav>    
-        <div id="home">
             <!--
             <h2 style="margin-left: 45px;font-size: 1.7rem;">Featured Products</h2>
             <div class="product-card">
@@ -58,13 +56,16 @@
             </div>
         </div> 
         <div id="site-features">
-             Options
-        </div>
+             O7tions
+        </div7
             -->
         <div id="home">
-            <h2>Premium Developments Boards</h2>
-            <button class="buttons">Shop</button>
-        </div>
+            <img id="home-img" src="../images/bg/img2.jpg">
+            <img id="home-img" src="../images/bg/img6.jpg">
+            <div class="center-img">
+                <h2>PREMIUM DEVELOPMENT BOARDS</h2>
+                <button class="buttons">Shop Now</button>
+            </div>
         </div>   
     </body>
 </html>
