--- a/src/user/signup.html
+++ b/src/user/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
     <title>Retailo Signin</title>
-    <link rel="stylesheet" href="css/signing.css">
+    <link rel="stylesheet" href="css/signing.css?v=10">
     <link rel="stylesheet" href="css/buttons.css?v=12">
 </head>
 <body>
@@ -13,14 +13,17 @@
         <img class="login-img" src="assets/vector.png">
 
         <div id="form" class="login-form">
-            <h1>Sign in</h1>
+            <h1>Sign up</h1>
             <form method="post">
+                <label for="username">User name</label>
+                <input id="username" name="username"  type="text" required>
                 <label for="email">Email</label>
-                <input name="email" type="text" required><br>
+                <input name="email" type="text" required>   
                 <label for="password">Password</label>
                 <input id="password" name="password"  type="password" required>
+                <label for="confirm-password">Confirm password</label>
+                <input id="confirm-password" name="confirm-password"  type="password" required>
                 <input type="submit" class="buttons">
-                <p><a href="signup.html">Create new account</a></p>
             </form>
         </div>
     </div>
