--- a/src/user/index.html
+++ b/src/user/index.html
@@ -17,51 +17,38 @@
         </style>
         <script>
             function openPanel(){
-                document.getElementById('side-panel').style.width = "10vw";
+                document.getElementById('side-panel').style.display = "block";
             }
             function closePanel(){
-                document.getElementById('side-panel').style.width = "0vw";
+                document.getElementById('side-panel').style.display = "none";
+
             }
         </script>
     </head>    
     <body>
         <nav>
-            <div id="side-panel" class="side-panel">
-                <a href="javascript:void(0)" class="closebtn" onclick="closePanel()">&times;</a>
-                <a href="#">Catalog</a>
-                <a href="#">Products</a>
-                <a href="#">None</a>
-                <a href="#">Contact</a>
-            </div>
-            <div class="menu">
-                <div class="slide-menu">
-                    <button class="menu" onclick="openPanel()"><span class="material-symbols-outlined">menu</span></button>
-                </div>
-            </div>
             <h1>RETAILO</h1>
-            <div class="user-features">
-                <a href="#"><span class="material-symbols-outlined">account_circle</span></a>
-                <a href="#"><span class="material-symbols-outlined">shopping_bag</span></a>
+            <div id="#menu">
+                <div class="user-features">
+                    <a href="#"><span class="material-symbols-outlined">account_circle</span></a>
+                    <a href="#"><span class="material-symbols-outlined">shopping_bag</span></a>
+                </div>
+                <div id="side-panel" class="side-panel">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closePanel()">&times;</a>
+                    <a href="#">Catalog</a>
+                    <a href="#">Products</a>
+                    <a href="#">None</a>
+                    <a href="#">Contact</a>
+                </div>
+                <div class="menu-btn">
+                    <button class="menu" onclick="openPanel()"><span class="material-symbols-outlined">menu</span></button>  
+                </div>
+
             </div>
         </nav>    
-            <!--
-            <h2 style="margin-left: 45px;font-size: 1.7rem;">Featured Products</h2>
-            <div class="product-card">
-                <img src="../images/dev-boards/arduino-nano-33.jpg" alt="arduino-nano-33">
-                <p class="overlay"><a href="#">Arduino Nano 33</a></p>
-            </div>
-            <div class="product-card">
-                <img src="../images/sensor-modules/ir-sensor-module.jpg" alt="ir-sensor-module">
-                <p class="overlay"><a href="#">IR Sensor Module</a></p>
-            </div>
-        </div> 
-        <div id="site-features">
-             O7tions
-        </div7
-            -->
         <div id="home">
-            <img id="home-img" src="../images/bg/img2.jpg">
-            <img id="home-img" src="../images/bg/img6.jpg">
+            <img id="home-img" src="assets/img2.jpg">
+            <img id="home-img" src="assets/img6.jpg">
             <div class="center-img">
                 <h2>PREMIUM DEVELOPMENT BOARDS</h2>
                 <button class="buttons">Shop Now</button>
