1. File structure changed. 2. Implemented user Controller for database handling. 3. Tested new method for storing image in database

--- a/test/index.html
+++ b/test/index.html
@@ -1,155 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login/Register Form Toggle</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f4f4f4;
-            margin: 0;
-        }
 
-        #container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 350px;
-            text-align: center;
-        }
-
-        .form-section h2 {
-            margin-bottom: 25px;
-            color: #333;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-            text-align: left;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            color: #555;
-            font-weight: bold;
-        }
-
-        .form-group input[type="text"],
-        .form-group input[type="password"],
-        .form-group input[type="email"] {
-            width: calc(100% - 20px);
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-            width: 100%;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #registerForm {
-            display: none; /* Hidden by default */
-        }
-
-        .toggle-button-container {
-            margin-top: 20px;
-        }
-
-        .toggle-button-container button {
-            background-color: #6c757d;
-        }
-
-        .toggle-button-container button:hover {
-            background-color: #5a6268;
-        }
-    </style>
-</head>
-<body>
-
-    <div id="container">
-        <div id="loginForm" class="form-section">
-            <h2>Login</h2>
-            <form>
-                <div class="form-group">
-                    <label for="loginUsername">Username:</label>
-                    <input type="text" id="loginUsername" name="loginUsername" required>
-                </div>
-                <div class="form-group">
-                    <label for="loginPassword">Password:</label>
-                    <input type="password" id="loginPassword" name="loginPassword" required>
-                </div>
-                <button type="submit">Log In</button>
-            </form>
-        </div>
-
-        <div id="registerForm" class="form-section">
-            <h2>Register</h2>
-            <form>
-                <div class="form-group">
-                    <label for="registerUsername">Username:</label>
-                    <input type="text" id="registerUsername" name="registerUsername" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerEmail">Email:</label>
-                    <input type="email" id="registerEmail" name="registerEmail" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerPassword">Password:</label>
-                    <input type="password" id="registerPassword" name="registerPassword" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirmPassword">Confirm Password:</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" required>
-                </div>
-                <button type="submit">Sign Up</button>
-            </form>
-        </div>
-
-        <div class="toggle-button-container">
-            <button id="registerUserBtn">Register User</button>
-        </div>
-    </div>
-
-    <script>
-        const loginForm = document.getElementById('loginForm');
-        const registerForm = document.getElementById('registerForm');
-        const registerUserBtn = document.getElementById('registerUserBtn');
-
-        registerUserBtn.addEventListener('click', () => {
-            if (loginForm.style.display === 'none') {
-                // Currently showing register, switch to login
-                loginForm.style.display = 'block';
-                registerForm.style.display = 'none';
-                registerUserBtn.textContent = 'Register User';
-            } else {
-                // Currently showing login, switch to register
-                loginForm.style.display = 'none';
-                registerForm.style.display = 'block';
-                registerUserBtn.textContent = 'Back to Login';
-            }
-        });
-    </script>
-
-</body>
+<html>
+    <body>
+        <form action="./process.php" method="post" enctype="multipart/form-data">
+            <label for="image">Image </label>
+            <input type="file" id="image-upload" name="image-upload" accept="image/*">
+            <input type="submit" value="Upload Image" name="submit">
+        </form>
+    </body>
 </html>
